# xhandler-rust

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile.server  Dockerfile.ui  README.md  assessment.json  copyright.txt  entrypoint.sh  guia-homologacion-gem-anexo1.md  jreleaser.yml  openapi.yaml  pom.xml  release.sh
cli/: Cargo.toml
cli/examples/: credit_note.yaml  debit_note.yaml  invoice.yaml
cli/src/: cli.rs  input.rs  lib.rs  main.rs
cli/src/commands/: apply.rs  create.rs  mod.rs  send.rs  sign.rs  verify_ticket.rs
cli/tests/: apply_command.rs  create_command.rs  input_parsing.rs  send_command.rs  sign_command.rs  verify_ticket_command.rs
cli/tests/resources/: despatch_advice.yaml  invoice.json  invoice.yaml  perception.yaml  retention.yaml  summary_documents.yaml  voided_documents.yaml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: create.rs  mod.rs  send.rs  sign.rs  verify_ticket.rs
integration-tests/: Cargo.toml
integration-tests/tests/: homologacion.rs
openubl/api/: Cargo.toml
openubl/api/src/: db.rs  lib.rs
openubl/api/src/system/: credentials.rs  document.rs  error.rs  mod.rs  project.rs  ubl_document.rs
openubl/cli/: Cargo.toml
openubl/cli/src/: main.rs  sender.rs
openubl/index/: Cargo.toml
openubl/index/src/: config.rs  lib.rs  search_options.rs
openubl/index/src/client/: mod.rs  search.rs  write.rs
openubl/index/src/system/: directory.rs  mod.rs  state.rs  ubl_document.rs  writer.rs
openubl/server/: Cargo.toml
openubl/server/src/: dto.rs  lib.rs
openubl/server/src/server/: document.rs  files.rs  mod.rs  project.rs
openubl/storage/: Cargo.toml
openubl/storage/src/: config.rs  lib.rs
server/: Cargo.toml  README.md
server/api/: Cargo.toml
server/api/src/: db.rs
server/api/src/system/: credentials.rs  document.rs  mod.rs
server/cli/: Cargo.toml
server/cli/src/: main.rs
server/common/: Cargo.toml
server/common/src/: config.rs
server/entity/: Cargo.toml
server/entity/src/: delivery.rs  document.rs  keystore_config.rs  lib.rs  mod.rs
server/migration/: Cargo.toml  README.md
server/migration/src/: m20240101_104121_create_document.rs  m20240717_214515_create_delivery.rs
server/server/: Cargo.toml
server/server/src/: dto.rs  lib.rs  openapi.rs
server/server/src/server/: credentials.rs  document.rs  mod.rs
server/signature/: Cargo.toml
server/storage/: Cargo.toml
server/storage/src/: config.rs  lib.rs
server/ui/: .dockerignore  .prettierrc.mjs  README.md  biome.json  entrypoint.sh  eslint.config.js  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
server/ui/branding/: manifest.json  strings.json
server/ui/client/: index.html  package.json  rsbuild.config.ts  tsconfig.json
server/ui/client/config/: stylePaths.js
server/ui/client/public/: index.html.ejs
server/ui/client/src/: index.tsx
server/ui/client/types/: @hookform_resolvers_2.9.11.d.ts  array-filter-Boolean.ts
server/ui/common/: package.json  rollup.config.js  tsconfig.json
server/ui/common/src/: branding-strings-stub.json  branding.ts  environment.ts  index.ts  proxies.ts
server/ui/crate/: Cargo.toml  build.rs
server/ui/crate/src/: lib.rs
server/ui/scripts/: verify_lock.mjs
server/ui/server/: package.json  rollup.config.js
server/ui/server/src/: index.ts
server/ui/src/: routeTree.gen.ts
server/ui/src/client/: helpers.ts  models.ts  rest.ts
server/xtask/: Cargo.toml
server/xtask/src/: main.rs  openapi.rs
ublhub/server/: Cargo.toml
ublhub/server/src/: lib.rs
xbuilder/: Cargo.toml  README.md  build.rs
xbuilder/src/: catalogs.rs  lib.rs  prelude.rs  serde_date.rs
xbuilder/src/enricher/: fill.rs  mod.rs  process.rs  summary.rs
xbuilder/src/models/: common.rs  credit_note.rs  debit_note.rs  despatch_advice.rs  invoice.rs  mod.rs  perception.rs  perception_retention.rs  retention.rs  summary_documents.rs  voided_documents.rs
xbuilder/src/renderer/: mod.rs
xbuilder/tests/: credit_note.rs  credit_note_atributos.rs  credit_note_isc.rs  credit_note_orden_de_compra.rs  credit_note_product_codes.rs  debit_note.rs  debit_note_atributos.rs  debit_note_product_codes.rs  despatch_advice.rs  homologacion_group1.rs  homologacion_group10.rs  homologacion_group11.rs  homologacion_group12.rs  homologacion_group13.rs  homologacion_group14.rs  homologacion_group2.rs  homologacion_group3.rs  homologacion_group4.rs  homologacion_group5.rs  homologacion_group6.rs  homologacion_group7.rs  homologacion_group8.rs  homologacion_group9.rs  invoice.rs  invoice_anticipos.rs  invoice_atributos.rs  invoice_descuentos.rs  invoice_detraccion.rs  invoice_direccion_entrega.rs  invoice_documento_relacionado.rs  invoice_fecha_vencimiento.rs  invoice_forma_pago.rs  invoice_guias.rs  invoice_igv_tipo.rs  invoice_isc.rs  invoice_issue30.rs  invoice_moneda.rs  invoice_orden_compra.rs  invoice_percepcion.rs  invoice_product_codes.rs  (+4 more)
xbuilder/tests/common/: mod.rs
xsender/: Cargo.toml  README.md  build.rs
xsender/resources/templates/: get_status_crd.xml  send_summary.xml
xsender/resources/test/: 150101-F001-11.xml  F001-1.xml  R-12345678901-01-F001-00000587.xml  R-20220557805-01-F001-22Openubl.xml  RA-20200328-1.xml  bill_service_response_fault.xml  bill_service_response_ok.xml  bill_service_response_ticket.xml  get_status_response_ok.xml
xsender/src/: analyzer.rs  client_sunat.rs  constants.rs  file_sender.rs  global.rs  lib.rs  message_renderer.rs  metadata.rs  models.rs  prelude.rs  ubl_file.rs  xml.rs  xml_analyzer.rs  xml_file.rs  xml_metadata.rs  zip_manager.rs
xsender/src/soap/: cdr.rs  envelope.rs  mod.rs  send_file_response.rs  verify_ticket_response.rs
xsender/src/templates/: send_bill.xml  validate_cdp_criterios.xml  validate_file.xml  verify_ticket.xml
xsender/tests/: send_files.rs
xsigner/: Cargo.toml  README.md
xsigner/resources/test/: invoice_no_template.xml  invoice_with_template.xml  private.key
xsigner/src/: lib.rs
(+2266 files in other folders)
