[workspace]
resolver = "2"
members = ["xbuilder", "xsender", "xsigner"]

[workspace.dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.2"
log = "0.4.20"
tera = "1.19.1"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
rust_decimal = { version = "1.33.1", features = [
    "serde-str",
    "serde-with-str",
] }
rust_decimal_macros = "1.33.1"
xml = "0.8.10"
zip = { version = "2.1.5" }
reqwest = "0.12.5"
base64 = "0.22.1"
thiserror = "1.0.53"
anyhow = "1.0.78"
sha2 = "0.10.8"
rsa = "0.9.6"
rand = "0.8.5"
serial_test = "3.1.1"
tokio = "1.39.2"
xmlsec = "0.2.3"
libxml = "0.3.3"
x509-cert = "0.2.5"
der = { version = "0.7.6" }
spki = { version = "0.7.3" }

[patch.crates-io]
