[workspace]
resolver = "2"
members = [
    "xbuilder",
    "xsender",
    "xsigner",
    "xhandler",
    "server/migration",
    "server/entity",
    "server/common",
    "server/storage",
    "server/api",
    "server/server",
    "server/cli",
    "server/signature",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[workspace.dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.6"
log = "0.4.20"
tera = "1.19.1"
static-files = "0.2.1"
lazy_static = "1.4.0"
serde = { version = "1.0.208", features = ["derive"] }
rust_decimal = { version = "1.36" }
rust_decimal_macros = "1.36"
xml = "0.8.10"
zip = { version = "2.2.2" }
reqwest = "0.11"
base64 = "0.22.1"
thiserror = "1.0.53"
anyhow = "1.0.95"
sha2 = "0.10.8"
rsa = "0.9.6"
serial_test = "3.1.1"
tokio = "1.39.2"
libxml = "0.3.3"
quick-xml = "0.37.2"
x509-cert = "0.2.5"
der = { version = "0.7.6" }
openssl = "0.10"
xml_c14n = "0.3.0"

xhandler = { path = "./xhandler" }
openubl-migration = { path = "./server/migration" }
openubl-entity = { path = "./server/entity" }
openubl-common = { path = "./server/common" }
openubl-storage = { path = "./server/storage" }
openubl-api = { path = "./server/api" }
openubl-server = { path = "./server/server" }

sea-orm = "1"
sea-query = "0.32"
async-std = { version = "1" }
clap = "4"
minio = "0.1"
serde_json = "1"
uuid = "1.12"
tempfile = "3.15"
aws-sdk-s3 = "1.69"
aws-config = "1.5"
aws-smithy-runtime = "1.7"
aws-smithy-runtime-api = "1.7"
async-trait = "0.1"
env_logger = "0.11"
utoipa = "5.3"
utoipa-swagger-ui = "9.0"
actix-web = "4.9"
actix-web-httpauth = "0.8"
actix-4-jwt-auth = "1.2"
actix-multipart = "0.7"

[patch.crates-io]
