[workspace]
resolver = "2"
members = [
    "xbuilder",
    "xsender",
    "xsigner",
    "xhandler",
    "server/migration",
    "server/entity",
    "server/common",
    "server/storage",
    "server/api",
    "server/server",
    "server/cli",
    "server/signature",
    "server/xtask",
    "server/ui/crate",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
log = "0.4"
tera = "1.20"
static-files = "0.2"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1.36" }
rust_decimal_macros = "1.36"
xml = "0.8"
zip = { version = "2.2" }
reqwest = "0.12"
base64 = "0.22"
thiserror = "2.0"
anyhow = "1.0"
sha2 = "0.10"
rsa = "0.9"
serial_test = "3.2"
tokio = "1.43"
libxml = "0.3"
quick-xml = "0.37"
x509-cert = "0.2"
der = { version = "0.7" }
openssl = "0.10"
xml_c14n = "0.3"

xhandler = { path = "./xhandler" }
openubl-migration = { path = "./server/migration" }
openubl-entity = { path = "./server/entity" }
openubl-common = { path = "./server/common" }
openubl-storage = { path = "./server/storage" }
openubl-api = { path = "./server/api" }
openubl-server = { path = "./server/server" }
openubl-ui = { path = "./server/ui/crate" }

sea-orm = "1"
sea-query = "0.32"
async-std = { version = "1" }
clap = "4"
minio = "0.1"
serde_json = "1"
uuid = "1.15"
tempfile = "3.17"
aws-sdk-s3 = "1.72"
aws-config = "1.5"
aws-smithy-runtime = "1.7"
aws-smithy-runtime-api = "1.7"
async-trait = "0.1"
env_logger = "0.11"
utoipa = "5.3"
utoipa-actix-web = "0.1"
utoipa-swagger-ui = "9.0"
actix-web = "4.9"
actix-web-httpauth = "0.8"
actix-4-jwt-auth = "1.2"
actix-multipart = "0.7"
actix-web-static-files = "4"

[patch.crates-io]
