[package]
name = "openubl-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "openubl_cli"
path = "src/lib.rs"

[[bin]]
name = "openubl"
path = "src/main.rs"

[dependencies]
xhandler = { path = "../xhandler" }

clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
base64 = { workspace = true }
