[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Integration tests."

[dependencies]

[dev-dependencies]
rust_decimal = { workspace = true, features = ["serde-str", "serde-with-str"] }
rust_decimal_macros = { workspace = true }

xbuilder = { path = "../xbuilder" }
xsender = { path = "../xsender" }
xsigner = { path = "../xsigner" }
