[package]
name = "xbuilder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Creates XML files based on UBL under the standards of Peru."

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.2"
log = "0.4.20"
tera = "1.19.1"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
rust_decimal = { version = "1.33.1", features = ["serde-str", "serde-with-str"] }
rust_decimal_macros = "1.33.1"

[dev-dependencies]
xsender = { path = "../xsender" }
