[package]
name = "xbuilder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Creates XML files based on UBL under the standards of Peru."

[dependencies]
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
log = { workspace = true }
tera = { workspace = true }
static-files = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true, features = ["serde-str", "serde-with-str"] }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
libxml = { workspace = true }

serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

xsender = { path = "../xsender" }
xsigner = { path = "../xsigner" }

[build-dependencies]
static-files = { workspace = true }
