[package]
name = "xbuilder"
description = "Creates XML files based on UBL under the standards of Peru."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
log = { workspace = true }
tera = { workspace = true }
static-files = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
libxml = { workspace = true }

serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

xsender = { path = "../xsender" }
xsigner = { path = "../xsigner" }

[build-dependencies]
static-files = { workspace = true }
