[package]
name = "xsender"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Sends XML files through SOAP - SUNAT"

[dependencies]
xml = { workspace = true }
log = { workspace = true }
zip = { workspace = true }
tera = { workspace = true }
static-files = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
static-files = { workspace = true }
