[package]
name = "xsender"
description = "Sends XML files through SOAP - SUNAT"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xml = { workspace = true }
zip = { workspace = true }
tera = { workspace = true }
static-files = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
static-files = { workspace = true }
