[package]
name = "xsigner"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Sign your XML files"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
xmlsec = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
x509-cert = { workspace = true, features = ["builder"] }
der = { workspace = true, features = ["alloc", "derive", "flagset", "oid"] }

# sha2 = { workspace = true, features = ["oid"] }
# spki = { workspace = true, features = ["alloc"] }
# rand = { workspace = true }

[dev-dependencies]
