[package]
name = "openubl-desktop"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
name = "openubl_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
xhandler = { path = "../../xhandler" }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
