[package]
name = "openubl-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openubl-entity = {path = "../entity"}
openubl-common = {path = "../common"}
openubl-migration = {path = "../migration"}

sea-orm = { version = "0.12", features = [ "sea-query-binder", "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-query = "0.30.5"
async-trait = "0.1.75"
anyhow = "1.0.76"
thiserror = "1.0.53"
serde_json = "1.0.108"
