[package]
name = "openubl-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openubl-server = { path = "../server" }

clap = { version = "4.5.2", features = ["derive", "env"] }
anyhow = "1.0.76"
actix-web = "4.4.1"
