[package]
name = "openubl-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openubl-server = { path = "../server" }

clap = { version = "4.4.11", features = ["derive", "env"] }
anyhow = "1.0.76"
actix-web = "4.4.1"
log = "0.4.21"
postgresql_embedded = "0.9.5"
tokio = { version = "1.38.0", features = ["full"] }