[package]
name = "openubl-index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openubl-storage = { path = "../storage" }

clap = {version = "4.4.16", features = ["derive", "env"]}
anyhow = "1.0.78"
thiserror = "1.0.53"
tantivy = "0.21.1"
humantime = "2.1.0"
bytesize = "1.3.0"
log = "0.4.20"
zstd = "0.13.0"
sha2 = "0.10.8"
tar = "0.4.40"
rand = "0.8.5"
time = "0.3.31"
reqwest = "0.11.23"
serde = "1.0.195"
