[package]
name = "openubl-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openubl-entity = { workspace = true }
openubl-common = { workspace = true }
openubl-migration = { workspace = true }
openubl-storage = { workspace = true }

xhandler = { workspace = true }

sea-orm = { workspace = true, features = [
    "sea-query-binder",
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-query = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
