[package]
name = "openubl-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
openubl-server = { workspace = true }

clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
actix-web = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
