[package]
name = "openubl-migration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.0.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
   "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
   "sqlx-sqlite",         # `DATABASE_DRIVER` feature
   "sqlx-postgres",         # `DATABASE_DRIVER` feature
]
