[package]
name = "openubl-server"
description = "Web service for managing UBL files from SUNAT"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openubl-api = { workspace = true }
openubl-common = { workspace = true }
openubl-entity = { workspace = true }
openubl-storage = { workspace = true }
openubl-ui = { workspace = true }

xhandler = { workspace = true }

actix-web = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true, features = ["actix_extras", "yaml"] }
utoipa-actix-web = { workspace = true }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
actix-web-httpauth = { workspace = true }
actix-4-jwt-auth = { workspace = true }
actix-multipart = { workspace = true }
actix-web-static-files = { workspace = true }
minio = { workspace = true }
