[package]
name = "openubl-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
minio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
aws-sdk-s3 = { workspace = true }
tokio = { workspace = true }
aws-config = { workspace = true }
aws-smithy-runtime = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
