[package]
name = "ublhub-server"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Web service for managing UBL files from SUNAT"

[dependencies]
ublhub-api = { path = "../api" }
ublhub-common = { path = "../common" }
ublhub-entity = {path = "../entity"}
xsender = { path = "../../xsender" }
xbuilder = { path = "../../xbuilder" }

actix-web = "4.4.1"
serde = { version = "1.0.193", features = ["derive"] }
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
clap = "4.4.11"
anyhow = "1.0.76"
env_logger = "0.10.1"
thiserror = "1.0.50"
utoipa = { version = "4.1.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["actix-web"] }
