[package]
name = "openubl-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
static-files = { workspace = true }
tera = { workspace = true }

[build-dependencies]
static-files = { workspace = true }
